[gd_scene load_steps=9 format=2]

[ext_resource path="res://EnemyEntity.gd" type="Script" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://sprites/icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 11.1288

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 12.8924

[sub_resource type="CircleShape2D" id=4]
radius = 120.0

[sub_resource type="CircleShape2D" id=5]
radius = 173.527

[node name="Entity" type="Node2D"]
script = ExtResource( 1 )

[node name="Enemy" type="RigidBody2D" parent="." groups=[
"enemies",
]]
mode = 2
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy"]
modulate = Color( 0.909804, 0.0470588, 0.0470588, 1 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Hitbox"]
shape = SubResource( 3 )

[node name="AggroRadius" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/AggroRadius"]
shape = SubResource( 4 )

[node name="ChaseRadius" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/ChaseRadius"]
shape = SubResource( 5 )

[node name="IdleTimer" type="Timer" parent="Enemy"]

[connection signal="area_entered" from="Enemy/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Enemy/AggroRadius" to="." method="_on_AggroRadius_body_entered"]
[connection signal="body_exited" from="Enemy/ChaseRadius" to="." method="_on_ChaseRadius_body_exited"]
